...
    FavoriteDialogMaker(
        favoritesViewModel = favoritesViewModel,
        showCreateDialog = showCreateDialog,
    )

    Column(
        modifier = Modifier.testTag("favoritesScreen"),
    ) {
        HeaderLogo()
        if (favorites.isEmpty()) {
            Text(
                stringResource(R.string.no_favorites),
                style = MaterialTheme.typography.titleLarge,
...
                showCreateDialog.value = true
            },
            modifier =
                Modifier
                    .align(Alignment.BottomEnd)
                    .padding(16.dp)
                    .testTag("showCreateDialogButton"),
            content = {
                Icon(
                    Icons.Default.Create,
                    contentDescription =
                        stringResource(R.string.start_sequence_icon_description),
                )
...
