...
            horizontalAlignment = Alignment.CenterHorizontally,
        ) {
            Text(
                text = favorite.name,
                style = MaterialTheme.typography.titleLarge,
                modifier =
                    Modifier.padding(bottom = 8.dp).testTag("favoriteName"),
            )
            Column(
                modifier = Modifier.fillMaxWidth(),
                horizontalAlignment = Alignment.Start,
            ) {
                Text(
...
            confirmButton = {
                Button(onClick = {
                    CoroutineScope(Dispatchers.Main).launch {
                        favoritesViewModel.deleteFavorite(favorite)
                    }
                    showDeleteDialog = false
                }, modifier = Modifier.testTag("confirmDeleteButton")) {
                    Text(stringResource(R.string.delete))
                }
            },
            dismissButton = {
                Button(
                    onClick = {
...
