...
            searchViewModel.search("")
        },
    )

    if (showCreateDialog.value) {
        AlertDialog(
            modifier = Modifier.testTag("createFavoriteDialog"),
            onDismissRequest = { showCreateDialog.value = false },
            title = { Text(text = stringResource(R.string.create_sequence)) },
            text = {
                Column {
                    Card(
                        modifier =
...
