...
                        }
                    }
                    launchSingleTop = true
                    restoreState = true
                }
            },
            modifier = Modifier.testTag("bottomNavigationBarHome"),
        )
        NavigationBarItem(
            selected = currentRoute == Screen.SearchScreen.route,
            label = {
                Text(stringResource(R.string.search))
            },
...
                        }
                    }
                    launchSingleTop = true
                    restoreState = true
                }
            },
            modifier = Modifier.testTag("bottomNavigationBarSearch"),
        )
        NavigationBarItem(
            selected = currentRoute == Screen.GameScreen.route,
            label = {
                Text(stringResource(R.string.game))
            },
...
