package com.platform.openemoji.emoji.category

data class Category(val name: String, val route: String)
