...
                        emoji.name,
                    ),
            ) {
                navController.navigate(
                    Screen.EmojiDetailScreen.withArgs(emoji.name),
                )
            }.padding(4.dp).testTag("iconRoute"),
    )
}

// This will be used for the emoji icon details view since it used to copy the emoji
@Composable
fun IconCopy(emoji: Emoji) {
...
